--- a/main.css
+++ b/main.css
@@ -62,4 +62,10 @@
     font-size: 50px; 
     }
 
-  
+    .carsGame {
+      position: absolute;
+      top: 20px;
+      padding-left: 1400px;
+      height: 100px;
+      width:150px;
+     }
