--- a/main.css
+++ b/main.css
@@ -17,8 +17,9 @@
 
   .gameBoard { 
     padding-top: 60px;
-    padding-left: 30px;
+    padding-left: 200px;
     padding-bottom: 60px;
+    padding-right: 200px;
     display: flex; 
     flex-wrap: wrap; 
     margin: 60px auto; 
@@ -65,7 +66,7 @@
     .carsGame {
       position: absolute;
       top: 20px;
-      padding-left: 1400px;
+      padding-left: 1700px;
       height: 100px;
       width:150px;
      }
